--- a/package.json
+++ b/package.json
@@ -4,15 +4,25 @@
   "private": true,
   "dependencies": {
     "@emotion/css": "^11.11.2",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/node": "^20.5.1",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
+    "formik": "^2.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-paystack": "^4.0.3",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
-    "typescript": "^5.1.6",
-    "web-vitals": "^2.1.0"
+    "react-use": "^17.4.0",
+    "redux-thunk": "^2.4.2",
+    "typescript": "^4.4.2",
+    "web-vitals": "^2.1.0",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
